# Spritter

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  Spritter.sln  library.h
examples/: CMakeLists.txt
examples/01-ClearScreen/: README.md  main.cpp
examples/02-Sprite/: README.md  main.cpp
examples/03-Transforms/: README.md  main.cpp
examples/04-Input/: README.md  main.cpp
examples/05-Text/: README.md  main.cpp
include/Spritter/: Event.h  Game.h  Input.h  Spritter.h  Time.h  Window.h
include/Spritter/Graphics/: Font.h  GraphicsDevice.h  Renderable.h  Shader.h  SpriteRenderer.h  Texture.h  TextureBatcher.h
include/Spritter/Math/: Color.h  Math.h  Matrix.h  Rectangle.h  Size.h  Vector2.h  Vector4.h
include/Spritter/UI/: AnchorLayout.h  Button.h  Common.h  Control.h  Label.h  Panel.h  UI.h  UIManager.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Game.cpp  Input.cpp  SDLUtils.cpp  SDLUtils.h  Time.cpp  Window.cpp
src/Graphics/: Font.cpp  GraphicsDevice.cpp  SpriteRenderer.cpp  TextureBatcher.cpp
src/Graphics/D3D11/: D3D11GraphicsDevice.cpp  D3D11GraphicsDevice.h  D3D11Renderable.cpp  D3D11Renderable.h  D3D11Utils.h
src/Graphics/GL/: GLGraphicsDevice.cpp  GLGraphicsDevice.h  GLRenderable.cpp  GLRenderable.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
src/Graphics/grabs/: GrabsGraphicsDevice.cpp  GrabsGraphicsDevice.h
src/Spritter/: Class1.cs  Game.cs  GameInfo.cs  GameOptions.cs  Spritter.csproj  Window.cs
src/Spritter.Graphics/: GraphicsDevice.cs  PixelFormat.cs  Renderable.cs  RenderableInfo.cs  Renderer.cs  Shader.cs  ShaderAttachment.cs  ShaderStage.cs  SpriteRenderer.cs  Spritter.Graphics.csproj  Texture.cs  Uniform.cs  UniformType.cs  VertexElement.cs  VertexElementType.cs
src/Spritter.Graphics.OpenGL/: GLGraphicsDevice.cs  Spritter.Graphics.OpenGL.csproj
src/Spritter.Graphics/OpenGL/: GLGraphicsDevice.cs  GLRenderable.cs  GLShader.cs  GLTexture.cs
src/Spritter/Graphics/: AttributeType.cs  GraphicsDevice.cs  GraphicsState.cs  GraphicsUtils.cs  IndexFormat.cs  PixelFormat.cs  Renderable.cs  RenderableInfo.cs  Shader.cs  ShaderAttachment.cs  ShaderAttribute.cs  ShaderStage.cs  ShaderUniform.cs  SpriteRenderer.cs  Texture.cs  UniformType.cs
src/Spritter/Graphics/Structs/: CameraMatrices.cs
src/UI/: AnchorLayout.cpp  Button.cpp  Control.cpp  Label.cpp  Panel.cpp  UIManager.cpp
tests/: main.cpp
tests/Spritter.Tests/: Program.cs  Spritter.Tests.csproj  TestGame.cs
tests/Tests.Graphics/: Program.cs  Tests.Graphics.csproj
tests/Tests.Spritter/: Program.cs  TestGame.cs
